refactor(backend): move company name param to path instead of body
